--- a/quickview.sass
+++ b/quickview.sass
@@ -1,3 +1,6 @@
+$quickview-z: 35 !default
+$quickview-header-height: 4rem !default
+$quickview-footer-height: 4rem !default
 $quickview-shadow: 5px 0px 13px 3px rgba( 0, 0, 0, 0.1 ) !default
 $quickview-divider: 1px solid $grey-lighter !default
 
@@ -6,10 +9,12 @@ $quickview-divider: 1px solid $grey-lighter !default
   flex-direction: column
   background-color: $white
   max-width: calc( 100% - 50px )
+  &.is-marginless
+    max-width: 100%
   position: fixed
   top: 0
   bottom: 0
-  z-index: 999
+  z-index: $quickview-z
   transform: translateZ( 0 )
   transition: .3s ease
   backface-visibility: hidden
@@ -52,12 +57,21 @@ $quickview-divider: 1px solid $grey-lighter !default
   justify-content: space-between
   align-items: center
   padding: 0 1rem
-  min-height: 64px !important
+  min-height: $quickview-header-height !important
   border-bottom: $quickview-divider
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-#{$name}
+      background-color: $color
+      .title
+        color: $color-invert
   .title
     font-size: $size-6
     font-weight: $weight-light
     margin-bottom: 0
+    img
+      max-height: 2em
 
 .quickview-body
   -webkit-box-flex: 1
@@ -69,7 +83,7 @@ $quickview-divider: 1px solid $grey-lighter !default
   justify-content: center
   align-items: center
   padding: 0 1rem
-  min-height: 4rem
+  min-height: $quickview-footer-height
   background-color: $white-ter
   border-top: $quickview-divider
   > *
